# rust-fractal-gui

./: Cargo.toml  README.md  build.rs  start.toml
src/: commands.rs  custom.rs  formatters.rs  lens.rs  lib.rs  main.rs  render_thread.rs  theme.rs  ui.rs
src/widgets/: dropdown.rs  either.rs  fractal.rs  mod.rs  no_update_label.rs
