[package]
name = "rust_fractal_gui"
version = "0.3.0"
authors = ["jackyarndley <34801340+jackyarndley@users.noreply.github.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
druid = { git = "https://github.com/linebender/druid.git" }
rust_fractal = {path = "../rust-fractal-core"}
config = "^0.9"
parking_lot = { version = "0.11", features = ["nightly"] }
float_eq = "^0.6.0"

[build-dependencies]
vergen = "4.2.0"

[profile.release]
lto = "fat"